<resources>
    <string name="app_name">Arjen</string>
    <string name="input_story_title">Unesite naslov priče</string>
    <string name="story_title">Naslov priče</string>
    <string name="story_text">Tekst priče</string>
    <string name="input_story_text">Unesite tekst priče</string>
    <string name="input_question">Unesite pitanje</string>
    <string name="questions">Pitanja</string>
    <string name="question_substring">pitanje</string>
    <string name="question">Pitanje</string>
    <string name="options">Opcije</string>
    <string name="subject">Predmet</string>
    <string name="question_text">Pitanje</string>
    <string name="input_subject">Unesite predmet</string>
    <string name="quiz_title">Naslov kviza</string>
    <string name="input_quiz_title">Unesite naslov kviza</string>
    <string name="option_substring">opcija</string>
    <string name="new_question">Novo pitanje</string>
    <string name="editing">Uređujete</string>
    <string name="new_option">Nova opcija</string>
    <string name="input_option">Unesite opciju</string>
    <string name="stories">Priče</string>
    <string name="quizes">Kvizovi</string>
    <string name="no_answer">Pitanje mora imati naznačen točan odgovor</string>
    <string name="no_options">Pitanje mora imati barem dva moguća odgovora</string>
    <string name="pause">Pauziraj</string>
    <string name="play">Nastavi</string>
    <string name="play_all">Pročitaj sve</string>
    <string name="search">Pretraživanje</string>
    <string name="no_questions_for_story">Nema pitanja za priču</string>
    <string name="no_questions_for_quiz">Nema pitanja za kviz</string>
    <string name="no_options_for_question">Nema opcija za pitanje</string>
    <string name="no_quizes">Nema kvizova</string>
    <string name="no_stories">Nema priča</string>
    <string name="input_search_value">Unesite vrijednost za pretragu</string>
    <string name="correct">Točno</string>
    <string name="incorrect">Netočno</string>
    <string name="home">Početna stranica</string>
    <string name="is">je</string>
    <string name="story_next">Počinje priča</string>
    <string name="started">Čitanje je pokrenuto</string>
    <string name="add_question">Dodavanje pitanja</string>
    <string name="add_quiz">Dodavanje kviza</string>
    <string name="add_story">Dodavanje priče</string>
    <string name="play_question">Odgovaranje na pitanje</string>
    <string name="play_quiz">Igranje kviza</string>
    <string name="play_story">Slušanje priče</string>
    <string name="quiz_list">Popis kvizova</string>
    <string name="story_list">Popis priča</string>
    <string name="main_activity">Početni izbornik</string>
    <string name="numbers">Brojevi</string>
    <string name="numbers_sound">Brojevi zvukom</string>
    <string name="numbers_words">Brojevi riječima</string>
    <string name="numbers_words_sound">Brojevi riječima ili zvukom</string>
    <string name="number_to_guess">Zadani broj</string>
    <string name="number_input">Uneseni broj</string>
    <string name="no_questions">Nema pitanja</string>
    <string name="unknown">nepoznat</string>
    <string name="question_list">Popis pitanja</string>
    <string name="read_text">Pročitaj tekst</string>
    <string name="check_answer">Provjera odgovora</string>
    <string name="choose_option">Odabir opcije</string>
    <string name="increase_number">Povećaj broj</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="story_delete">Jeste li sigurni da želite izbrisati priču? Ova radnja se ne može poništiti.</string>
    <string name="quiz_delete">Jeste li sigurni da želite izbrisati kviz? Ova radnja se ne može poništiti.</string>
    <string name="question_delete">Jeste li sigurni da želite izbrisati pitanje? Ova radnja se ne može poništiti.</string>
    <string name="option_substring_editing">opciju</string>
    <string name="go_back">Jeste li sigurni da želite odbaciti izmjene?</string>
    <string name="confirm_change">Jeste li sigurni da želite prihvatiti izmjene?</string>
    <string name="stopped">Čitanje je zaustavljeno</string>
    <string name="play_all_active">Kontrola prelaskom prsta preko ekrana je omogućena</string>
    <string name="play_all_inactive">Kontrola prelaskom prsta preko ekrana nije omogućena</string>
    <string name="option_delete">Jeste li sigurni da želite izbrisati opciju? Ova radnja se ne može poništiti.</string>
    <string name="showSpeaking">Trenutno se čita:</string>
    <string name="option">Opcija</string>
    <string name="option_exists">Opcija s istim tekstom već postoji</string>
</resources>