<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".activities.QuestionList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/startSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_search_24">

        </ImageButton>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <CheckBox
            android:id="@+id/checkBoxTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:checked="true"
            android:text="@string/quiz_title" />

        <CheckBox
            android:id="@+id/checkBoxSubject"
            android:textSize="21sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject" />

        <CheckBox
            android:id="@+id/checkBoxQuestion"
            android:textSize="21sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text" />

    </LinearLayout>

    <EditText
        android:id="@+id/searchQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:inputType="textMultiLine"
        android:hint="@string/input_search_value" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            android:text="@string/questions" />

        <ImageButton
            android:id="@+id/addQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_add_24"/>

        <ImageButton
            android:id="@+id/nextScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>

        <ImageButton
            android:id="@+id/previousScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/noResults"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_questions"/>

    <ScrollView
        android:scrollbarSize="50dip"
        android:fadeScrollbars="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questionsRecyclerView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>