<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.QuizList">

    <LinearLayout
        android:id="@+id/allData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/startSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_search_24">

                </ImageButton>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/quiz_title"
                    android:textSize="21sp" />

                <CheckBox
                    android:id="@+id/checkBoxSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:textSize="21sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/searchQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_search_value"
                android:inputType="textMultiLine"
                android:minWidth="48dp"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizes"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/addQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_add_24" />

                <ImageButton
                    android:id="@+id/nextScroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/previousScroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                    android:visibility="gone" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/noResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_quizes"
                android:textSize="21sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/quizesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:scrollbarSize="50dip"
                android:scrollbarThumbVertical="@drawable/ic_baseline_stop_24"
                android:scrollbars="vertical"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/showSpeaking"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="@string/showSpeaking"
                android:textSize="21sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/read_text"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/choose_option"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_swipe_left_24" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_swipe_right_24" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fui_progress_dialog_loading"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true" />

    </LinearLayout>

</LinearLayout>